2016-07-21  Jakub Jelinek  <jakub@redhat.com>

	* tree-object-size.c (unknown): Use HOST_WIDE_INT_M1U instead of -1.

2016-07-21  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Improving concepts performance and diagnostics.
	* timevar.def (TV_CONSTRAINT_SAT, TV_CONSTRAINT_SUB): New time vars
	for constraint satisfaction and subsumption.
	* timevar.h (auto_timevar): New constructor that matches the push/pop
	pattern of usage in pt.c.

2016-07-20  Uros Bizjak  <ubizjak@gmail.com>

	* hwint.h (HOST_WIDE_INT_0): New define.
	(HOST_WIDE_INT_0U): Ditto.
	* double-int.c: Use HOST_WIDE_INT_0 instead of (HOST_WIDE_INT) 0.
	* dse.c: Use HOST_WIDE_INT_0U instead of (unsigned HOST_WIDE_INT) 0.
	* simplify-rtx.c: Ditto.
	* tree-object-size.c: Ditto.

2016-07-20  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* config/s390/s390.c (s390_encode_section_info): Remove mode size
	check.

2016-07-20  Uros Bizjak  <ubizjak@gmail.com>

	* cse.c: Use HOST_WIDE_INT_M1 instead of ~(HOST_WIDE_INT) 0.
	* combine.c: Use HOST_WIDE_INT_M1U instead of
	~(unsigned HOST_WIDE_INT) 0.
	* double-int.h: Ditto.
	* dse.c: Ditto.
	* dwarf2asm.c:Ditto.
	* expmed.c: Ditto.
	* genmodes.c: Ditto.
	* match.pd: Ditto.
	* read-rtl.c: Ditto.
	* tree-ssa-loop-ivopts.c: Ditto.
	* tree-ssa-loop-prefetch.c: Ditto.
	* tree-vect-generic.c: Ditto.
	* tree-vect-patterns.c: Ditto.
	* tree.c: Ditto.

2016-07-20  Georg-Johann Lay  <avr@gjlay.de>

	* gcc/config/avr.c (avr_legitimize_address) [AVR_TINY]: Force
	constant addresses outside [0,0xc0] into a register.
	(avr_out_movhi_r_mr_reg_no_disp_tiny): Pass insn.  And handle
	cases where the base address register is unused after.
	(avr_out_movhi_r_mr_reg_disp_tiny): Same.
	(avr_out_movhi_mr_r_reg_disp_tiny): Same.
	(avr_out_store_psi_reg_disp_tiny): Same.

2016-07-20  Georg-Johann Lay  <avr@gjlay.de>

	Implement attribute progmem on reduced Tiny cores by adding
	flash offset 0x4000 to respective symbols.

	PR target/71948